--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Bootsrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://kit.fontawesome.com/bbc509cd91.js"></script>
+  <script src="https://kit.fontawesome.com/bbc509cd91.js" crossorigin="anonymous"></script>
+  <link rel='stylesheet' href= "https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.min.css">
 </head>
 <body>
   <app-root></app-root>
